[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Camera.gd" type="Script" id=1]
[ext_resource path="res://Theme/BlobsTheme.tres" type="Theme" id=2]
[ext_resource path="res://Sprites/rounded white square.png" type="Texture" id=3]
[ext_resource path="res://Sprites/hit vignette.png" type="Texture" id=4]
[ext_resource path="res://Sounds/ear ringing.wav" type="AudioStream" id=5]
[ext_resource path="res://Scenes/MenuCheese.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.556863 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.556863 )

[node name="Camera2D" type="Camera2D"]
pause_mode = 2
z_index = 10
current = true
zoom = Vector2( 0.6, 0.6 )
smoothing_enabled = true
smoothing_speed = 15.0
script = ExtResource( 1 )

[node name="Listener2D" type="Listener2D" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="SpeedrunTimer" type="Label" parent="."]
light_mask = 0
margin_left = 5.0
margin_top = -175.0
margin_right = 45.0
margin_bottom = -159.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Time"
align = 1

[node name="AmmoDisplay" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 2 )

[node name="AmmoLabel" type="Label" parent="AmmoDisplay"]
light_mask = 0
margin_left = -20.0
margin_top = -23.0
margin_right = 20.0
margin_bottom = -9.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "42"
align = 1
valign = 1

[node name="ScoreLabel" type="Label" parent="AmmoDisplay/AmmoLabel"]
light_mask = 0
margin_top = 38.0
margin_right = 40.0
margin_bottom = 52.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "42"
align = 1
valign = 1

[node name="HitVignette" type="TextureRect" parent="."]
modulate = Color( 1, 0, 0, 0 )
light_mask = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
theme = ExtResource( 2 )
texture = ExtResource( 4 )

[node name="EarRingSound" type="AudioStreamPlayer" parent="HitVignette"]
stream = ExtResource( 5 )

[node name="RadialInventory" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="Panel" type="Panel" parent="RadialInventory"]
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -938.0
margin_top = -677.0
margin_right = 982.0
margin_bottom = 403.0
custom_styles/panel = SubResource( 2 )

[node name="GrenadesLabel" type="Label" parent="RadialInventory"]
light_mask = 0
margin_left = -32.0
margin_top = 70.0
margin_right = 31.0
margin_bottom = 84.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "grenades"

[node name="Circle" type="Control" parent="RadialInventory"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 40.0
margin_bottom = 40.0

[node name="0" parent="RadialInventory/Circle" instance=ExtResource( 6 )]

[node name="1" parent="RadialInventory/Circle" instance=ExtResource( 6 )]
rect_rotation = 59.9999

[node name="2" parent="RadialInventory/Circle" instance=ExtResource( 6 )]
rect_rotation = 120.0

[node name="3" parent="RadialInventory/Circle" instance=ExtResource( 6 )]
rect_rotation = 180.0

[node name="4" parent="RadialInventory/Circle" instance=ExtResource( 6 )]
rect_rotation = 240.0

[node name="5" parent="RadialInventory/Circle" instance=ExtResource( 6 )]
rect_rotation = 300.0

[node name="PauseMenu" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
theme = ExtResource( 2 )

[node name="NinePatchRect" type="NinePatchRect" parent="PauseMenu"]
modulate = Color( 0, 1, 0.0470588, 1 )
light_mask = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -60.0
margin_right = 75.0
margin_bottom = 60.0
texture = ExtResource( 3 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Panel" type="Panel" parent="PauseMenu"]
light_mask = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -980.0
margin_top = -560.0
margin_right = 980.0
margin_bottom = 560.0
custom_styles/panel = SubResource( 1 )

[node name="ButtonStack" type="VBoxContainer" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -63.0
margin_top = -47.5
margin_right = 63.0
margin_bottom = 47.5

[node name="Label" type="Label" parent="PauseMenu/ButtonStack"]
light_mask = 0
margin_right = 126.0
margin_bottom = 35.0
text = "PAUSED
"
align = 1

[node name="ResumeButton" type="Button" parent="PauseMenu/ButtonStack"]
light_mask = 0
margin_top = 39.0
margin_right = 126.0
margin_bottom = 55.0
text = "RESUME"

[node name="RestartButton" type="Button" parent="PauseMenu/ButtonStack"]
light_mask = 0
margin_top = 59.0
margin_right = 126.0
margin_bottom = 75.0
text = "RESTART"

[node name="MenuButton" type="Button" parent="PauseMenu/ButtonStack"]
light_mask = 0
margin_top = 79.0
margin_right = 126.0
margin_bottom = 95.0
text = "QUIT TO MENU"

[node name="EndScreen" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
theme = ExtResource( 2 )

[node name="NinePatchRect" type="NinePatchRect" parent="EndScreen"]
modulate = Color( 0, 1, 0.0470588, 1 )
light_mask = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -60.0
margin_right = 90.0
margin_bottom = 60.0
texture = ExtResource( 3 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Panel" type="Panel" parent="EndScreen"]
light_mask = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -980.0
margin_top = -560.0
margin_right = 980.0
margin_bottom = 560.0
custom_styles/panel = SubResource( 1 )

[node name="ButtonStack" type="VBoxContainer" parent="EndScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.5
margin_top = -47.5
margin_right = 77.5
margin_bottom = 47.5

[node name="Label" type="Label" parent="EndScreen/ButtonStack"]
light_mask = 0
margin_right = 155.0
margin_bottom = 35.0
text = "LEVEL COMPLETE!
"
align = 1

[node name="NextLevelButton" type="Button" parent="EndScreen/ButtonStack"]
light_mask = 0
margin_top = 39.0
margin_right = 155.0
margin_bottom = 55.0
text = "NEXT LEVEL"

[node name="RestartButton" type="Button" parent="EndScreen/ButtonStack"]
light_mask = 0
margin_top = 59.0
margin_right = 155.0
margin_bottom = 75.0
text = "RESTART LEVEL"

[node name="MenuButton" type="Button" parent="EndScreen/ButtonStack"]
light_mask = 0
margin_top = 79.0
margin_right = 155.0
margin_bottom = 95.0
text = "QUIT TO MENU"

[node name="DeadScreen" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
theme = ExtResource( 2 )

[node name="NinePatchRect" type="NinePatchRect" parent="DeadScreen"]
modulate = Color( 0, 1, 0.0470588, 1 )
light_mask = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -60.0
margin_right = 90.0
margin_bottom = 60.0
texture = ExtResource( 3 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Panel" type="Panel" parent="DeadScreen"]
light_mask = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -980.0
margin_top = -560.0
margin_right = 980.0
margin_bottom = 560.0
custom_styles/panel = SubResource( 1 )

[node name="DeadVingette" type="TextureRect" parent="DeadScreen"]
modulate = Color( 1, 0, 0, 1 )
light_mask = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
theme = ExtResource( 2 )
texture = ExtResource( 4 )

[node name="ButtonStack" type="VBoxContainer" parent="DeadScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.5
margin_top = -38.5
margin_right = 77.5
margin_bottom = 38.5

[node name="Label" type="Label" parent="DeadScreen/ButtonStack"]
light_mask = 0
margin_right = 155.0
margin_bottom = 35.0
text = "LEVEL FAILED!
"
align = 1

[node name="RestartButton" type="Button" parent="DeadScreen/ButtonStack"]
light_mask = 0
margin_top = 39.0
margin_right = 155.0
margin_bottom = 55.0
text = "RESTART LEVEL"

[node name="MenuButton" type="Button" parent="DeadScreen/ButtonStack"]
light_mask = 0
margin_top = 59.0
margin_right = 155.0
margin_bottom = 75.0
text = "QUIT TO MENU"

[connection signal="pressed" from="PauseMenu/ButtonStack/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="PauseMenu/ButtonStack/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="PauseMenu/ButtonStack/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="EndScreen/ButtonStack/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
[connection signal="pressed" from="EndScreen/ButtonStack/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="EndScreen/ButtonStack/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="DeadScreen/ButtonStack/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="DeadScreen/ButtonStack/MenuButton" to="." method="_on_MenuButton_pressed"]
